kubernetes/applications/bridges/zwave-js-ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zwave-js-ui
  labels:
    app.kubernetes.io/name: radio-operators
    app.kubernetes.io/part-of: everlab
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
